Move kubernetes-monitoring service account creation to deployer image

--- a/dynatrace-operator-google-marketplace/chart/dynatrace-operator/templates/configmap.yaml
+++ b/dynatrace-operator-google-marketplace/chart/dynatrace-operator/templates/configmap.yaml
@@ -384,3 +384,84 @@ data:
       podInfoOnMount: true
       volumeLifecycleModes:
         - Ephemeral
+
+  kubernetes-monitoring-clusterrole.yaml: |
+    apiVersion: rbac.authorization.k8s.io/v1
+    kind: ClusterRole
+    metadata:
+      name: dynatrace-kubernetes-monitoring
+      ownerReferences:
+      - apiVersion: v1beta1
+        blockOwnerDeletion: true
+        kind: Application
+        name: {{ .Release.Name }}
+        uid: ##UID##
+    rules:
+      - apiGroups:
+          - ""
+          - batch
+          - apps
+          - apps.openshift.io
+          - config.openshift.io
+        resources:
+          - nodes
+          - pods
+          - namespaces
+          - deployments
+          - replicasets
+          - deploymentconfigs
+          - replicationcontrollers
+          - jobs
+          - cronjobs
+          - statefulsets
+          - daemonsets
+          - events
+          - resourcequotas
+          - pods/proxy
+          - nodes/proxy
+          - services
+          - clusterversions
+        verbs:
+          - list
+          - watch
+          - get
+      - nonResourceURLs:
+          - /metrics
+          - /version
+          - /readyz
+          - /healthz
+        verbs:
+          - get
+  
+  kubernetes-monitoring-clusterrolebinding.yaml: |
+    apiVersion: rbac.authorization.k8s.io/v1
+    kind: ClusterRoleBinding
+    metadata:
+      name: dynatrace-kubernetes-monitoring
+      ownerReferences:
+      - apiVersion: v1beta1
+        blockOwnerDeletion: true
+        kind: Application
+        name: {{ .Release.Name }}
+        uid: ##UID##
+    roleRef:
+      apiGroup: rbac.authorization.k8s.io
+      kind: ClusterRole
+      name: dynatrace-kubernetes-monitoring
+    subjects:
+      - kind: ServiceAccount
+        name: dynatrace-kubernetes-monitoring
+        namespace: {{ .Release.Namespace }}
+
+  kubernetes-monitoring-serviceaccount.yaml: | 
+    apiVersion: v1
+    kind: ServiceAccount
+    metadata:
+      name: dynatrace-kubernetes-monitoring
+      namespace: {{ .Release.Namespace }}
+      ownerReferences:
+      - apiVersion: v1beta1
+        blockOwnerDeletion: true
+        kind: Application
+        name: {{ .Release.Name }}
+        uid: ##UID##
