--- a/dynatrace-operator/tests/Openshift/oneagent/serviceaccount-oneagent-unprivileged_test.yaml
+++ b/dynatrace-operator/tests/Openshift/oneagent/serviceaccount-oneagent-unprivileged_test.yaml
@@ -1,4 +1,4 @@
-suite: test serviceaccount for webhook
+suite: test serviceaccount for oneagent
 templates:
   - Openshift/oneagent/serviceaccount-oneagent-unprivileged.yaml
 tests:
