--- a/dynatrace-oneagent-operator/crds/default/dynatrace.com_oneagents_crd.yaml
+++ b/dynatrace-oneagent-operator/crds/default/dynatrace.com_oneagents_crd.yaml
@@ -1,3 +1,6 @@
+{{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes, openshift or openshift-3-11" (include "dynatrace-operator.platformSet" .))}}
+{{- if or (eq .Values.platform "kubernetes") (eq .Values.platform "openshift") }}
+
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
@@ -442,3 +445,5 @@ spec:
   - name: v1alpha1
     served: true
     storage: true
+
+{{ end }}
