--- a/dynatrace-operator/crds/default/dynatrace.com_dynakubes.yaml
+++ b/dynatrace-operator/crds/default/dynatrace.com_dynakubes.yaml
@@ -1,3 +1,5 @@
+{{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes, openshift or openshift-3-11" (include "dynatrace-operator.platformSet" .))}}
+{{- if or (eq .Values.platform "kubernetes") (eq .Values.platform "openshift") }}
 
 ---
 apiVersion: apiextensions.k8s.io/v1
@@ -6007,3 +6009,5 @@ status:
     plural: ""
   conditions: []
   storedVersions: []
+
+{{ end }}
