Move CRD files into template folder

--- a/dynatrace-oneagent-operator/templates/Common/customresource-oneagent.yaml
+++ b/dynatrace-oneagent-operator/templates/Common/customresource-oneagent.yaml
@@ -20,6 +20,8 @@ kind: OneAgent
 metadata:
   name: {{ .Values.oneagent.name }}
   namespace: {{ .Release.Namespace }}
+  annotations:
+    "helm.sh/hook": post-install
 spec:
   apiUrl: {{ .Values.oneagent.apiUrl }}
   tokens: {{ .Values.oneagent.name }}
