--- a/dynatrace-oneagent-operator/templates/crds/openshift-3.11/dynatrace.com_oneagentapms.yaml
+++ b/dynatrace-oneagent-operator/templates/crds/openshift-3.11/dynatrace.com_oneagentapms.yaml
@@ -1,4 +1,4 @@
-{{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes, openshift or openshift-3-11" (include "dynatrace-operator.platformSet" .))}}
+{{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes, openshift or openshift-3-11" (include "dynatrace-oneagent-operator.platformSet" .))}}
 {{- if eq .Values.platform "openshift-3-11"}}
 
 ---
