--- a/dynatrace-oneagent-operator/templates/crds/openshift-3.11/dynatrace.com_oneagents.yaml
+++ b/dynatrace-oneagent-operator/templates/crds/openshift-3.11/dynatrace.com_oneagents.yaml
@@ -1,6 +1,7 @@
-{{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes, openshift or openshift-3-11" (include "dynatrace-operator.platformSet" .))}}
-{{- if or (eq .Values.platform "kubernetes") (eq .Values.platform "openshift") }}
+{{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes, openshift or openshift-3-11" (include "dynatrace-oneagent-operator.platformSet" .))}}
+{{- if eq .Values.platform "openshift-3-11"}}
 
+---
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
@@ -33,6 +34,7 @@ spec:
     listKind: OneAgentList
     plural: oneagents
     singular: oneagent
+  preserveUnknownFields: false
   scope: Namespaced
   subresources:
     status: {}
@@ -69,6 +71,7 @@ spec:
               items:
                 type: string
               type: array
+              x-kubernetes-list-type: set
             customPullSecret:
               description: 'Optional: Pull secret for your private registry'
               type: string
@@ -151,8 +154,13 @@ spec:
                               for env vars'
                             type: string
                           divisor:
+                            anyOf:
+                            - type: integer
+                            - type: string
                             description: Specifies the output format of the exposed
                               resources, defaults to "1"
+                            pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                            x-kubernetes-int-or-string: true
                           resource:
                             description: 'Required: resource to select'
                             type: string
@@ -219,12 +227,22 @@ spec:
                 pods'
               properties:
                 limits:
-                  additionalProperties: {}
+                  additionalProperties:
+                    anyOf:
+                    - type: integer
+                    - type: string
+                    pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                    x-kubernetes-int-or-string: true
                   description: 'Limits describes the maximum amount of compute resources
                     allowed. More info: https://kubernetes.io/docs/concepts/configuration/manage-compute-resources-container/'
                   type: object
                 requests:
-                  additionalProperties: {}
+                  additionalProperties:
+                    anyOf:
+                    - type: integer
+                    - type: string
+                    pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                    x-kubernetes-int-or-string: true
                   description: 'Requests describes the minimum amount of compute resources
                     required. If Requests is omitted for a container, it defaults
                     to Limits if that is explicitly specified, otherwise to an implementation-defined
@@ -311,16 +329,16 @@ spec:
               description: Conditions includes status about the current state of the
                 instance
               items:
-                description: "Condition contains details for one aspect of the current\
-                  \ state of this API Resource. --- This struct is intended for direct\
-                  \ use as an array at the field path .status.conditions.  For example,\
-                  \ type FooStatus struct{     // Represents the observations of a\
-                  \ foo's current state.     // Known .status.conditions.type are:\
-                  \ \"Available\", \"Progressing\", and \"Degraded\"     // +patchMergeKey=type\
-                  \     // +patchStrategy=merge     // +listType=map     // +listMapKey=type\
-                  \     Conditions []metav1.Condition `json:\"conditions,omitempty\"\
-                  \ patchStrategy:\"merge\" patchMergeKey:\"type\" protobuf:\"bytes,1,rep,name=conditions\"\
-                  ` \n     // other fields }"
+                description: "Condition contains details for one aspect of the current
+                  state of this API Resource. --- This struct is intended for direct
+                  use as an array at the field path .status.conditions.  For example,
+                  type FooStatus struct{     // Represents the observations of a foo's
+                  current state.     // Known .status.conditions.type are: \"Available\",
+                  \"Progressing\", and \"Degraded\"     // +patchMergeKey=type     //
+                  +patchStrategy=merge     // +listType=map     // +listMapKey=type
+                  \    Conditions []metav1.Condition `json:\"conditions,omitempty\"
+                  patchStrategy:\"merge\" patchMergeKey:\"type\" protobuf:\"bytes,1,rep,name=conditions\"`
+                  \n     // other fields }"
                 properties:
                   lastTransitionTime:
                     description: lastTransitionTime is the last time the condition
@@ -352,12 +370,13 @@ spec:
                       not be empty.
                     maxLength: 1024
                     minLength: 1
+                    pattern: ^[A-Za-z]([A-Za-z0-9_,:]*[A-Za-z0-9_])?$
                     type: string
                   status:
                     description: status of the condition, one of True, False, Unknown.
                     enum:
-                    - 'True'
-                    - 'False'
+                    - "True"
+                    - "False"
                     - Unknown
                     type: string
                   type:
@@ -367,6 +386,7 @@ spec:
                       (see .node.status.conditions), the ability to deconflict is
                       important. The regex it matches is (dns1123SubdomainFmt/)?(qualifiedNameFmt)
                     maxLength: 316
+                    pattern: ^([a-z0-9]([-a-z0-9]*[a-z0-9])?(\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*/)?(([A-Za-z0-9][-A-Za-z0-9_.]*)?[A-Za-z0-9])$
                     type: string
                 required:
                 - lastTransitionTime
@@ -445,5 +465,11 @@ spec:
   - name: v1alpha1
     served: true
     storage: true
+status:
+  acceptedNames:
+    kind: ""
+    plural: ""
+  conditions: []
+  storedVersions: []
 
 {{ end }}
