--- a/dynatrace-operator/templates/crds/default/dynatrace.com_dynakubes.yaml
+++ b/dynatrace-operator/templates/crds/default/dynatrace.com_dynakubes.yaml
@@ -1,5 +1,5 @@
 {{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes, openshift or openshift-3-11" (include "dynatrace-operator.platformSet" .))}}
-{{- if or (eq .Values.platform "kubernetes") (eq .Values.platform "openshift") }}
+{{- if ne .Values.platform "openshift-3-11"}}
 
 ---
 apiVersion: apiextensions.k8s.io/v1
