Fix typo in OAO helm chart

--- a/dynatrace-oneagent-operator/templates/Common/mutatingwebhookconfiguration.yaml
+++ b/dynatrace-oneagent-operator/templates/Common/mutatingwebhookconfiguration.yaml
@@ -1,4 +1,4 @@
-{{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes, openshift or openshift-3-11" (include "dynatrace-operator.platformSet" .))}}
+{{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes, openshift or openshift-3-11" (include "dynatrace-oneagent-operator.platformSet" .))}}
 {{- if or (eq .Values.platform "kubernetes") (eq .Values.platform "openshift") }}
 
 # Copyright 2019 Dynatrace LLC
