--- a/dynatrace-operator/templates/Openshift-3.11/operator/serviceaccount-operator.yaml
+++ b/dynatrace-operator/templates/Openshift-3.11/operator/serviceaccount-operator.yaml
@@ -12,18 +12,16 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-apiVersion: v2
-name: dynatrace-operator
-description: The Dynatrace Operator Helm chart for Kubernetes and OpenShift
-icon: https://assets.dynatrace.com/global/resources/Signet_Logo_RGB_CP_512x512px.png
-home: https://www.dynatrace.com/
-type: application
-version: 0.2.1
-appVersion: 0.2.1
-maintainers:
-  - name: DTMad
-    email: marco.mader@dynatrace.com
-  - name: mmayr-at
-    email: michael.mayr@dynatrace.com
-sources:
-  - https://github.com/Dynatrace/helm-charts
+{{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes or openshift" (include "dynatrace-operator.platformSet" .))}}
+{{- if eq .Values.platform "openshift-3-11"}}
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: {{ .Release.Name }}
+  namespace: {{ .Release.Namespace }}
+  labels:
+    {{- include "dynatrace-operator.labels" . | nindent 4 }}
+imagePullSecrets:
+  - name: redhat-connect
+  - name: redhat-connect-sso
+{{ end }}
