--- a/dynatrace-operator/templates/Openshift-3.11/oneagent/serviceaccount-oneagent-unprivileged.yaml
+++ b/dynatrace-operator/templates/Openshift-3.11/oneagent/serviceaccount-oneagent-unprivileged.yaml
@@ -1,4 +1,4 @@
-# Copyright 2019 Dynatrace LLC
+# Copyright 2020 Dynatrace LLC
 
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -13,19 +13,13 @@
 # limitations under the License.
 
 {{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes or openshift" (include "dynatrace-operator.platformSet" .))}}
-{{- if eq .Values.platform "kubernetes" }}
-kind: Role
-apiVersion: rbac.authorization.k8s.io/v1
+{{- if eq .Values.platform "openshift-3-11"}}
+apiVersion: v1
+kind: ServiceAccount
 metadata:
   name: dynatrace-dynakube-oneagent-unprivileged
   namespace: {{ .Release.Namespace }}
-rules:
-  - apiGroups:
-      - policy
-    resources:
-      - podsecuritypolicies
-    resourceNames:
-      - dynatrace-dynakube-oneagent-unprivileged
-    verbs:
-      - use
+imagePullSecrets:
+  - name: redhat-connect
+  - name: redhat-connect-sso
 {{ end }}
