--- a/dynatrace-operator/templates/Openshift-3.11/oneagent/serviceaccount-oneagent.yaml
+++ b/dynatrace-operator/templates/Openshift-3.11/oneagent/serviceaccount-oneagent.yaml
@@ -13,18 +13,13 @@
 # limitations under the License.
 
 {{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes or openshift" (include "dynatrace-operator.platformSet" .))}}
-{{- if eq .Values.platform "kubernetes" }}
-apiVersion: rbac.authorization.k8s.io/v1
-kind: RoleBinding
+{{- if eq .Values.platform "openshift-3-11"}}
+apiVersion: v1
+kind: ServiceAccount
 metadata:
-  name: dynatrace-dynakube-oneagent-unprivileged
+  name: dynatrace-dynakube-oneagent
   namespace: {{ .Release.Namespace }}
-roleRef:
-  apiGroup: rbac.authorization.k8s.io
-  kind: Role
-  name: dynatrace-dynakube-oneagent-unprivileged
-subjects:
-  - kind: ServiceAccount
-    name: dynatrace-dynakube-oneagent-unprivileged
-    namespace: {{ .Release.Namespace }}
+imagePullSecrets:
+  - name: redhat-connect
+  - name: redhat-connect-sso
 {{ end }}
