--- a/dynatrace-operator/tests/Common/customresource-dynakube_test.yaml
+++ b/dynatrace-operator/tests/Common/customresource-dynakube_test.yaml
@@ -65,13 +65,14 @@ tests:
       apiUrl: test-api-url
       apiToken: test-api-token
       paasToken: test-paas-token
+      name: test-name
       trustedCAs: test-ca
     asserts:
       - isNotNull:
           path: spec.trustedCAs
       - equal:
           path: spec.trustedCAs
-          value: test-ca
+          value: test-name
 
   - it: should add networkZone if set
     set:
@@ -85,6 +86,19 @@ tests:
       - equal:
           path: spec.networkZone
           value: test-network-zone
+  
+  - it: should add customPullSecret if set
+    set:
+      apiUrl: test-api-url
+      apiToken: test-api-token
+      paasToken: test-paas-token
+      customPullSecret: test-custom-pull-secret
+    asserts:
+      - isNotNull:
+          path: spec.customPullSecret
+      - equal:
+          path: spec.customPullSecret
+          value: test-custom-pull-secret
 
   - it: should add ActiveGate image if set
     set:
