--- a/dynatrace-oneagent-operator-google-marketplace/chart/dynatrace-oneagent-operator/templates/configmap.yaml
+++ b/dynatrace-oneagent-operator-google-marketplace/chart/dynatrace-oneagent-operator/templates/configmap.yaml
@@ -754,12 +754,6 @@ data:
       apiUrl: {{ .Values.oneagent.apiUrl }}
       tokens: {{ .Values.oneagent.name }}
       image: {{ include "dynatrace-oneagent.image" . | quote }}
-      {{- if eq .Values.oneagent.useUnprivilegedMode true }}
-      serviceAccountName: {{ .Values.oneagentUnprivilegedServiceAccount }}
-      {{- else }}
-      serviceAccountName: {{ .Values.oneagentServiceAccount }}
-      {{- end }}
-
 
       {{- if ne (printf "%T" .Values.oneagent.args) "string" }}
       args: {{- toYaml .Values.oneagent.args | nindent 8 }}
@@ -933,3 +927,29 @@ data:
       {{- if .Values.oneagent.flavor }}
       flavor: {{ .Values.oneagent.flavor }}
       {{- end }}
+
+  oneagent-serviceaccount.yaml: |
+    apiVersion: v1
+    kind: ServiceAccount
+    metadata:
+      name: dynatrace-oneagent
+      namespace: {{ .Release.Namespace }}
+      ownerReferences:
+      - apiVersion: v1beta1
+        blockOwnerDeletion: true
+        kind: Application
+        name: {{ .Release.Name }}
+        uid: ##UID##
+
+  oneagent-unprivileged-serviceaccount.yaml: |
+    apiVersion: v1
+    kind: ServiceAccount
+    metadata:
+      name: dynatrace-oneagent-unprivileged
+      namespace: {{ .Release.Namespace }}
+      ownerReferences:
+      - apiVersion: v1beta1
+        blockOwnerDeletion: true
+        kind: Application
+        name: {{ .Release.Name }}
+        uid: ##UID##
