--- a/dynatrace-operator/chart/default/templates/Kubernetes/oneagent/serviceaccount-oneagent.yaml
+++ b/dynatrace-operator/chart/default/templates/Kubernetes/oneagent/serviceaccount-oneagent.yaml
@@ -13,7 +13,7 @@
 # limitations under the License.
 
 {{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes, openshift or openshift-3-11" (include "dynatrace-operator.platformSet" .))}}
-{{- if eq .Values.platform "kubernetes" }}
+{{- if or (eq .Values.platform "kubernetes") (eq .Values.platform "google")}}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
