Makes oneagent helm chart functional + fixes shell scripts

--- a/dynatrace-oneagent-operator/chart/default/templates/Common/clusterrole-operator.yaml
+++ b/dynatrace-oneagent-operator/chart/default/templates/Common/clusterrole-operator.yaml
@@ -15,7 +15,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: {{ .Release.Name }}
+  name: dynatrace-oneagent-operator
   labels:
     {{- include "dynatrace-oneagent-operator.commonlabels" . | nindent 4 }}
 rules:
