--- a/dynatrace-oneagent-operator/chart/default/templates/Kubernetes/serviceaccount-operator.yaml
+++ b/dynatrace-oneagent-operator/chart/default/templates/Kubernetes/serviceaccount-operator.yaml
@@ -17,7 +17,7 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ .Release.Name }}
+  name: dynatrace-oneagent-operator
   namespace: {{ .Release.Namespace }}
   labels:
   {{- include "dynatrace-oneagent-operator.commonlabels" . | nindent 4 }}
