--- a/dynatrace-oneagent-operator/chart/default/templates/Common/clusterrolebinding-operator.yaml
+++ b/dynatrace-oneagent-operator/chart/default/templates/Common/clusterrolebinding-operator.yaml
@@ -15,14 +15,14 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: {{ .Release.Name }}
+  name: dynatrace-oneagent-operator
   labels:
     {{- include "dynatrace-oneagent-operator.commonlabels" . | nindent 4 }}
 subjects:
   - kind: ServiceAccount
-    name: {{ .Release.Name }}
+    name: dynatrace-oneagent-operator
     namespace: {{ .Release.Namespace }}
 roleRef:
   kind: ClusterRole
-  name: {{ .Release.Name }}
+  name: dynatrace-oneagent-operator
   apiGroup: rbac.authorization.k8s.io
