--- a/dynatrace-oneagent-operator/chart/default/templates/Common/rolebinding-operator.yaml
+++ b/dynatrace-oneagent-operator/chart/default/templates/Common/rolebinding-operator.yaml
@@ -15,15 +15,15 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: {{ .Release.Name }}
+  name: dynatrace-oneagent-operator
   namespace: {{ .Release.Namespace }}
   labels:
     {{- include "dynatrace-oneagent-operator.commonlabels" . | nindent 4 }}
 subjects:
   - kind: ServiceAccount
-    name: {{ .Release.Name }}
+    name: dynatrace-oneagent-operator
     namespace: {{ .Release.Namespace }}
 roleRef:
   kind: Role
-  name: {{ .Release.Name }}
+  name: dynatrace-oneagent-operator
   apiGroup: rbac.authorization.k8s.io
