--- a/dynatrace-oneagent-operator/chart/default/templates/Kubernetes/serviceaccount-oneagent.yaml
+++ b/dynatrace-oneagent-operator/chart/default/templates/Kubernetes/serviceaccount-oneagent.yaml
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-{{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes or openshift" (include "dynatrace-oneagent-operator.platformSet" .))}}
+{{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes or openshift or google" (include "dynatrace-oneagent-operator.platformSet" .))}}
 {{- if or (eq .Values.platform "kubernetes") (eq .Values.platform "google")}}
 apiVersion: v1
 kind: ServiceAccount
