--- a/dynatrace-oneagent-operator/chart/default/templates/Openshift/role-operator.yaml
+++ b/dynatrace-oneagent-operator/chart/default/templates/Openshift/role-operator.yaml
@@ -17,7 +17,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  name: {{ .Release.Name }}
+  name: dynatrace-oneagent-operator
   namespace: {{ .Release.Namespace }}
   labels:
     {{- include "dynatrace-oneagent-operator.commonlabels" . | nindent 4 }}
