Fixes oa chart test

--- a/dynatrace-oneagent-operator/chart/default/tests/operator_image_secret_test.yaml
+++ b/dynatrace-oneagent-operator/chart/default/tests/operator_image_secret_test.yaml
@@ -11,7 +11,7 @@ tests:
           of: Deployment
       - matchRegex:
           path: metadata.name
-          pattern: RELEASE-NAME
+          pattern: dynatrace-oneagent-operator
       - equal:
           path: spec.template.spec.imagePullSecrets[0].name
           value: myTestSecret
@@ -21,6 +21,6 @@ tests:
           of: Deployment
       - matchRegex:
           path: metadata.name
-          pattern: RELEASE-NAME
+          pattern: dynatrace-oneagent-operator
       - isNull:
           path: spec.template.spec.imagePullSecrets
