--- a/dynatrace-operator/chart/default/templates/Common/csi/csidriver.yaml
+++ b/dynatrace-operator/chart/default/templates/Common/csi/csidriver.yaml
@@ -11,7 +11,8 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-
+{{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes, openshift or openshift-3-11" (include "dynatrace-operator.platformSet" .))}}
+{{- if ne .Values.platform "openshift-3-11"}}
 apiVersion: storage.k8s.io/v1
 kind: CSIDriver
 metadata:
@@ -21,3 +22,4 @@ spec:
   podInfoOnMount: true
   volumeLifecycleModes:
     - Ephemeral
+{{end}}
