--- a/dynatrace-operator/chart/default/templates/Common/csi/role-csi.yaml
+++ b/dynatrace-operator/chart/default/templates/Common/csi/role-csi.yaml
@@ -11,7 +11,8 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-
+{{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes, openshift or openshift-3-11" (include "dynatrace-operator.platformSet" .))}}
+{{- if ne .Values.platform "openshift-3-11"}}
 kind: Role
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
@@ -30,3 +31,4 @@ rules:
   - apiGroups: [""]
     resources: ["secrets"]
     verbs: ["get", "list", "watch"]
+{{end}}
