--- a/dynatrace-operator/chart/default/templates/Common/csi/rolebinding-csi.yaml
+++ b/dynatrace-operator/chart/default/templates/Common/csi/rolebinding-csi.yaml
@@ -11,7 +11,8 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-
+{{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes, openshift or openshift-3-11" (include "dynatrace-operator.platformSet" .))}}
+{{- if ne .Values.platform "openshift-3-11"}}
 kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
@@ -25,3 +26,4 @@ roleRef:
   kind: Role
   name: dynatrace-oneagent-csi-driver
   apiGroup: rbac.authorization.k8s.io
+{{end}}
