--- a/dynatrace-operator/chart/default/templates/Common/csi/serviceaccount-csi.yaml
+++ b/dynatrace-operator/chart/default/templates/Common/csi/serviceaccount-csi.yaml
@@ -11,9 +11,11 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-
+{{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes, openshift or openshift-3-11" (include "dynatrace-operator.platformSet" .))}}
+{{- if ne .Values.platform "openshift-3-11"}}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: dynatrace-oneagent-csi-driver
   namespace: {{ .Release.Namespace }}
+{{end}}
