--- a/dynatrace-operator/chart/default/templates/Common/webhook/service.yaml
+++ b/dynatrace-operator/chart/default/templates/Common/webhook/service.yaml
@@ -11,7 +11,8 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-
+{{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes, openshift or openshift-3-11" (include "dynatrace-operator.platformSet" .))}}
+{{- if ne .Values.platform "openshift-3-11"}}
 apiVersion: v1
 kind: Service
 metadata:
@@ -27,3 +28,4 @@ spec:
     - port: 443
       protocol: TCP
       targetPort: server-port
+{{end}}
