--- a/dynatrace-operator/templates/Common/secret.yaml
+++ b/dynatrace-operator/templates/Common/secret.yaml
@@ -13,7 +13,7 @@
 # limitations under the License.
 
 {{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes or openshift" (include "dynatrace-operator.platformSet" .))}}
-{{- if and (.Values.apiToken) (.Values.paasToken) (.Values.autoCreateSecret) }}
+{{- if .Values.autoCreateSecret }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -22,8 +22,8 @@ metadata:
   labels:
   {{- include "dynatrace-operator.labels" . | nindent 4 }}
 data:
-  apiToken: {{ .Values.apiToken | b64enc }}
-  paasToken: {{ .Values.paasToken | b64enc }}
+  apiToken: {{ required "apiToken is required for generating secret" (.Values.apiToken | b64enc) }}
+  paasToken: {{ required "paasToken is required for generating secret" (.Values.paasToken | b64enc) }}
   {{- if .Values.proxy }}
   proxy: {{ .Values.proxy | b64enc }}
   {{- end }}
