--- a/dynatrace-operator/templates/Common/customresource-dynakube.yaml
+++ b/dynatrace-operator/templates/Common/customresource-dynakube.yaml
@@ -46,7 +46,7 @@ spec:
   {{- end }}
 
   {{- if .Values.oneagent.enableIstio }}
-  enableIstio: {{ .Values.oneagent.enableIstio }}
+  enableIstio: {{ .Values.enableIstio }}
   {{- end }}
 
   activeGate:
