--- a/dynatrace-operator/chart/default/templates/Common/secret.yaml
+++ b/dynatrace-operator/chart/default/templates/Common/secret.yaml
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-{{- if and (.Values.apiToken) (.Values.paasToken) (.Values.autoCreateSecret) }}
+{{- if .Values.autoCreateSecret }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -21,8 +21,8 @@ metadata:
   labels:
   {{- include "dynatrace-operator.labels" . | nindent 4 }}
 data:
-  apiToken: {{ .Values.apiToken | b64enc }}
-  paasToken: {{ .Values.paasToken | b64enc }}
+  apiToken: {{ required "apiToken is required for generating secret" (.Values.apiToken | b64enc) }}
+  paasToken: {{ required "paasToken is required for generating secret" (.Values.paasToken | b64enc) }}
   {{- if .Values.proxy }}
   proxy: {{ .Values.proxy | b64enc }}
   {{- end }}
