--- a/dynatrace-oneagent-operator/chart/default/templates/Common/service.yaml
+++ b/dynatrace-oneagent-operator/chart/default/templates/Common/service.yaml
@@ -12,7 +12,7 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-
+{{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes, openshift or openshift-3-11" (include "dynatrace-oneagent-operator.platformSet" .))}}
 apiVersion: v1
 kind: Service
 metadata:
