--- a/dynatrace-operator/chart/default/templates/Common/secret.yaml
+++ b/dynatrace-operator/chart/default/templates/Common/secret.yaml
@@ -12,6 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+{{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes, openshift, google, or openshift-3-11" (include "dynatrace-operator.platformSet" .))}}
 {{- if .Values.autoCreateSecret }}
 apiVersion: v1
 kind: Secret
@@ -27,4 +28,4 @@ data:
   proxy: {{ .Values.proxy | b64enc }}
   {{- end }}
 type: Opaque
-{{- end }}
+{{end}}
