--- a/dynatrace-operator/chart/default/templates/application.yaml
+++ b/dynatrace-operator/chart/default/templates/application.yaml
@@ -9,7 +9,7 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-
+{{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes, openshift, google, or openshift-3-11" (include "dynatrace-operator.platformSet" .))}}
 {{- if eq .Values.platform "google"}}
 
 ---
@@ -80,4 +80,4 @@ spec:
       kind: Role
     - group: rbac.authorization.k8s.io/v1
       kind: RoleBinding
-{{- end }}
+{{ end }}
