--- a/dynatrace-operator/chart/default/questions.yml
+++ b/dynatrace-operator/chart/default/questions.yml
@@ -5,10 +5,11 @@ questions:
 
   - variable: crdApplied
     label: "Was the CRD applied?"
-    description: "Please make sure you have applied the latest CRD by running `kubectl apply -f https://github.com/Dynatrace/dynatrace-operator/releases/latest/download/dynatrace.com_dynakubes.yaml`"
-    default: "false"
+    description: "Please make sure you have applied the latest CRD by following the instructions in the description above."
+    default: false
+    required: true
     type: boolean
-    group: "Global Configuration"
+    group: "Prerequisites"
     show_subquestion_if: true
     subquestions:
 
