--- a/dynatrace-oneagent-operator/chart/default/questions.yml
+++ b/dynatrace-oneagent-operator/chart/default/questions.yml
@@ -4,7 +4,7 @@ categories:
 questions:
 
   - variable: crdApplied
-    label: "Was the CRD applied?"
+    label: "CRD manually applied"
     description: "Please make sure you have applied the latest CRD by following the instructions in the description above."
     default: false
     required: true
